Replace Set of to Immutable Set